[package]
name = "agartex-authentication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = "0.6.16"
axum-extra = { version = "0.7.4", features = ["cookie"] }
bcrypt = "0.14.0"
chrono = "0.4.24"
cookie = "0.17.0"
http = "0.2.9"
lazy_static = "1.4.0"
mockall = "0.11.4"
rand = "0.8.5"
regex = "1.8.1"
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
validator = { version = "0.16.0", features = ["derive"] }
